--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,12 +1,9 @@
-// Body
-$body-bg: #f8fafc;
+$body-bg: #ffffff;
 
-$dark: #52525b;
 $primary: #06b6d4;
 $success: #22c55e;
 $warning: #f59e0b;
-$secondary:#e7e5e4;
-// Typography
+
 $font-family-sans-serif: "Poppins", serif;
-$font-size-base: 0.86rem;
+$font-size-base: 0.9rem;
 $line-height-base: 1.6;
